--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "blob-to-buffer": "^1.2.9",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/blob-to-buffer": "^1.2.0",
+    "@types/fluent-ffmpeg": "^2.1.22",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
