--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qurancaption",
   "private": true,
   "version": "0.0.0",
-  "homepage": "/app",
+  "homepage": "/",
   "type": "module",
   "scripts": {
     "dev": "vite",
