--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mobile-detect": "^1.4.5",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^1.0.3"
   },
   "devDependencies": {
     "@types/blob-to-buffer": "^1.2.0",
