--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "qurancaption",
-  "private": true,
-  "version": "0.0.0",
-  "homepage": "/app",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "blob-to-buffer": "^1.2.9",
-    "mobile-detect": "^1.4.5",
-    "react": "^18.2.0",
-    "react-audio-player": "^0.17.0",
-    "react-dom": "^18.2.0",
-    "sonner": "^1.0.3"
-  },
-  "devDependencies": {
-    "@types/blob-to-buffer": "^1.2.0",
-    "@types/fluent-ffmpeg": "^2.1.22",
-    "@types/react": "^18.2.27",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.4"
-  }
+    "name": "qurancaption",
+    "private": true,
+    "version": "0.0.0",
+    "homepage": "/",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "blob-to-buffer": "^1.2.9",
+        "mobile-detect": "^1.4.5",
+        "react": "^18.2.0",
+        "react-audio-player": "^0.17.0",
+        "react-dom": "^18.2.0",
+        "sonner": "^1.0.3"
+    },
+    "devDependencies": {
+        "@types/blob-to-buffer": "^1.2.0",
+        "@types/fluent-ffmpeg": "^2.1.22",
+        "@types/react": "^18.2.27",
+        "@types/react-dom": "^18.2.7",
+        "@vitejs/plugin-react": "^4.0.3",
+        "autoprefixer": "^10.4.16",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.3",
+        "typescript": "^5.0.2",
+        "vite": "^4.4.4"
+    }
 }
